tests/ui/parser/issues/issue-1655.stderr
error: expected one of `!` or `[`, found `vec`
  --> $DIR/issue-1655.rs:2:6
   |
LL |     #vec[doc(
   |      ^^^ expected one of `!` or `[`

error: aborting due to 1 previous error

